<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/tittle_color"
    tools:context=".Plano_Nuevo">


    <TextView
        android:id="@+id/Ingresando_plano"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#009688"
        android:padding="12dp"
        android:text="@string/ingresando_plano"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/codigo_plano"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="50dp"
        android:autofillHints=""
        android:background="#6F009688"
        android:hint="@string/codigo_plano"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        android:selectAllOnFocus="true"
        android:textColor="#000000"
        android:textColorHint="#000000"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Ingresando_plano" />

    <EditText
        android:id="@+id/revision_plano"
        android:layout_width="100dp"
        android:layout_height="wrap_content"

        android:layout_marginTop="50dp"
        android:layout_marginEnd="25dp"
        android:autofillHints=""
        android:background="#6F009688"
        android:hint="@string/revision_plano"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        android:selectAllOnFocus="true"
        android:textColor="#000000"
        android:textColorHint="#000000"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Ingresando_plano" />

    <EditText
        android:id="@+id/nombre_plano"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="30dp"

        android:layout_marginEnd="25dp"
        android:autofillHints=""
        android:background="#6F009688"
        android:hint="@string/nombre_plano1"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        android:selectAllOnFocus="true"
        android:textColor="#000000"
        android:textColorHint="#000000"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/codigo_plano" />

    <EditText
        android:id="@+id/dibujante_plano"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="30dp"

        android:layout_marginEnd="25dp"
        android:autofillHints=""
        android:background="#6F009688"
        android:hint="@string/dibujante_plano"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        android:selectAllOnFocus="true"
        android:textColor="#000000"
        android:textColorHint="#000000"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nombre_plano" />


    <Button
        android:id="@+id/boton_registrar_plano"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"

        android:layout_marginBottom="30dp"
        android:background="@drawable/boton_tipico"
        android:text="@string/boton_registrar_plano"
        android:textColor="#009688"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"

        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView13"
        android:layout_width="341dp"
        android:layout_height="263dp"
        android:layout_marginTop="50dp"
        android:contentDescription="@string/app_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dibujante_plano"
        app:srcCompat="@drawable/fondo_1" />


</androidx.constraintlayout.widget.ConstraintLayout>