<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cointraint_activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animationCache="false"
    android:background="@drawable/ituango_2"
    tools:context=".Activity_login">

    <EditText
        android:id="@+id/reg_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="200dp"
        android:layout_marginEnd="24dp"

        android:autofillHints=""
        android:background="#78000000"
        android:hint="@string/Reg_email"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        android:selectAllOnFocus="true"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/reg_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"

        android:background="#78000000"
        android:hint="@string/password"
        android:imeOptions="actionDone"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:padding="10dp"
        android:selectAllOnFocus="true"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reg_email" />

    <Button
        android:id="@+id/ingresar"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginStart="48dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="48dp"
        android:background="#009688"
        android:text="@string/login"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reg_password" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="208dp"
        android:background="#78000000"
        android:text="@string/textView6"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ingresar"
        app:layout_constraintVertical_bias="0.126" />


</androidx.constraintlayout.widget.ConstraintLayout>